# picnic

./: CMakeLists.txt  README.md
docs/: enginelog.md
scripts/linux/: init.sh
src/engine/: CMakeLists.txt  app.cpp  app.h  assett.cpp  assett.h  display.cpp  display.h  entity.cpp  entity.h  gameplay_engine.cpp  gameplay_engine.h  input.cpp  input.h  scene_loader.cpp  scene_loader.h
src/engine/collision/: CMakeLists.txt  box_collider.cpp  box_collider.h  box_collider_renderer.cpp  collision_engine.cpp  collision_engine.h
src/engine/component/: CMakeLists.txt  component.cpp  component.h  transform.cpp  transform.h
src/engine/logging/: CMakeLists.txt  logger.cpp  logger.h
src/engine/messaging/: CMakeLists.txt  messenger.cpp  messenger.h
src/engine/rendering/: CMakeLists.txt  image_renderer.cpp  material.h  renderer.cpp  renderer.h  rendering_engine.cpp  rendering_engine.h  texture.h  texture_renderer.cpp  texture_renderer.h
src/engine/scene/: CMakeLists.txt  scene.cpp  scene.h  scene_destroyed.h  scene_loader.cpp  scene_loader.h
src/engine/time/: CMakeLists.txt  game_time.cpp  game_time.h
src/game/: CMakeLists.txt  assett.h  fill_screen_renderer.cpp  fill_screen_renderer.h  game_coordinator.cpp  game_coordinator.h  game_ending.h  main.cpp  picnic_app.cpp  picnic_app.h  tag.h
src/game/player/: CMakeLists.txt  basket_picker.cpp  basket_picker.h  player_controller.cpp  player_controller.h
src/game/scene/: CMakeLists.txt  game_ending_scene.cpp  game_ending_scene.h  scene_navigator.cpp  scene_navigator.h  test_scene.cpp  test_scene.h
